[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hermes-cli"
version = "1.0.0"
description = "CLI for the Hermes Webhook Delivery Middleware"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["click>=8.1"]

[project.scripts]
hermes = "hermes_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_cli*"]
