[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "relora-cli"
version = "1.0.0"
description = "CLI for the Relora"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["click>=8.1"]

[project.scripts]
relora = "relora_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["relora_cli*"]
